css/style.css
/* ... */
.popup.arrow.up:before{
    top: -8px;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-bottom: 8px solid var(--light-color);
    left:50%;
    transform: translateX(-50%);
}
.popup.arrow.left:before{
    bottom: 50%;
    border-bottom: 8px solid transparent;
    border-top: 8px solid transparent;
    border-right: 8px solid var(--light-color);
    right:100%;
    transform: translateY(-50%);
}
.popup.arrow.right:before{
    bottom: 50%;
    border-bottom: 8px solid transparent;
    border-top: 8px solid transparent;
    border-left: 8px solid var(--light-color);
    left:100%;
    transform: translateY(-50%);
}
.popup .btn {
    display: inline-block;
    font-weight: 600;
    padding: .5rem 1rem;
    text-align: center;
    text-transform: uppercase;
}
.popup .caption .buttons li:nth-of-type(1) .btn {
    background: var(--accent-color);
    border-color:transparent!important;
    color:var(--light-color);
}
/*.popup .caption .buttons li:nth-of-type(1) .btn:hover {*/
/*    background: var(--accent-hover-color);*/
/*    color:var(--light-color);*/
/*}*/
/*.popup .caption .buttons li:nth-of-type(2) .btn {*/
/*    color: var(--green-color);*/
/*}*/
.popup .caption .buttons li:nth-of-type(2) .btn {
    background: var(--green-color);
    color:var(--light-color);
}
/*.popup .caption .buttons li:nth-of-type(3) .btn {*/
/*    color: var(--blue-color);*/
/*}*/
.popup .caption .buttons li:nth-of-type(3) .btn {
    background: var(--blue-color);
    color: var(--light-color);
}
/*.popup .caption .buttons li:nth-of-type(4) .btn {*/
/*    color: var(--orange-color);*/
/*}*/
.popup .caption .buttons li:nth-of-type(4) .btn {
    background: var(--orange-color);
    color:var(--light-color);
}
/*.popup .caption .buttons li:nth-of-type(5) .btn {*/
/*    color: var(--purple-color);*/
/*}*/
.popup .caption .buttons li:nth-of-type(5) .btn {
    background: var(--purple-color);
    color:var(--light-color);
}
.popup .caption {
    display: none;
    padding: 15px;
}
.popup .caption .buttons {
    display: none;
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.popup .caption .buttons .btn {
    border: 2px solid var(--light-gray-color);
    display: block;
    font-weight: 900;
    margin-top:.5rem;
}
.popup .caption .buttons .btn:hover {
    border-color:transparent;
}
.popup .caption .buttons .btn ~ .btn {
    margin-top:.5rem;
}
.popup .caption .caption-title {
    font-family: var(--secondary-font);
    font-size: 1.25rem;
}
.popup .caption .caption-text {
    color: var(--dark-gray-color);
    display: none;
    font-size: .75rem;
    padding: .5rem 0;
}
.popup .close {
    align-items: center;
    background: var(--accent-color);
    box-shadow: inset 0 0 0 2px var(--light-gray-color);
    border-radius: 50%;
    color:var(--light-gray-color);
    display: flex;
    font-size: 2.5rem;
    font-weight: bold;
    height: 2.75rem;
    line-height: 2.75rem;
    justify-content: center;
    opacity: 1!important;
    position: absolute;
    right: -20px;
    text-align: center;
    text-decoration: none;
    top: -20px;
    width: 2.75rem;
    z-index: 1;
}
.popup .close:hover {
    background: var(--accent-hover-color);
}
.popup img {
    display: block;
    height: auto;
    width: 100%;
}
.selectpicker + .btn {
    border:1px solid var(--gray-color);
}
svg {
    height:100%;
    width:auto;
}
@media not all and (min-resolution: 0.001dpcm) { /* Safari only */
    svg {
        min-width:100%;
    }
}
svg > a polygon {
    stroke: var(--gray-color);
    stroke-width: 2;
    stroke-linejoin: round;
    stroke-opacity: 0;
}
svg > foreignObject {
    display:none;
    opacity: 0;
    pointer-events: none;
}
svg > rect {
    fill: var(--dark-color);
    opacity: 0;
    transition: opacity 300ms;
    pointer-events: none;
}
svg > rect:target {
    opacity: 0.66;
    pointer-events: auto;
}
svg > rect:target + foreignObject {
    display: block;
    opacity: 1;
    pointer-events: auto;
}
/*svg > rect:target + foreignObject .popup {
    opacity: 1;
}*/
svg > rect:target + foreignObject ~ a {
    pointer-events: none;
}
svg > rect:not(:target) ~ a:hover polygon {
    fill:var(--dark-color);
    fill-opacity: .33;
    stroke-opacity: 1;
}
svg > rect:target + foreignObject + a polygon {
    fill-opacity: 0!important;
    stroke-opacity: 1;
}
svg > #BiltmoreFairwayLodge + foreignObject {
    x:120;
    y:290;
}
svg > #TwoBiltmoreEstates + foreignObject {
    x:920;
    y:400;
}
svg > #BiltmoreSquare + foreignObject {
    x:290;
    y:160;
}
svg > #BiltmoreCourts + foreignObject {
    x:460;
    y:190;
}
svg > #\32 211 + foreignObject {
                   x:230;
                   y:540;
               }
svg > #EsplanadePlace + foreignObject {
    x:450;
    y:630;
}
svg > #Optima + foreignObject {
    x:270;
    y:630;
}
svg > #VillageOnTheLakes + foreignObject {
    x:470;
    y:540;
}
svg > #BiltmoreGates + foreignObject {
    x:190;
    y:70;
}
svg > #BiltmoreGreens + foreignObject {
    x:420;
    y:130;
}
svg > #Meridian + foreignObject {
    x:490;
    y:630;
}
svg > #BiltmoreTerrace + foreignObject {
    x:380;
    y:700;
}
svg > #BiltmoreCircleEstates + foreignObject {
    x:380;
    y:170;
}
svg > #Taliverde + foreignObject {
    x:280;
    y:450;
}
svg > #ColonyBiltmoreGreens + foreignObject {
    x:340;
    y:510;
}
svg > #BiltmoreCourtsIi + foreignObject {
    x:450;
    y:180;
}
svg > #HeightsOfTheBiltmore + foreignObject {
    x:110;
    y:370;
}
svg > #BiltmoreHillsideVillas + foreignObject {
    x:360;
    y:0;
}
svg > #TheCloisters + foreignObject {
    x:30;
    y:290;
}
svg > #BiltmoreShores + foreignObject {
    x:370;
    y:480;
}
svg > #BiltmoreMountainEstates + foreignObject {
    x:630;
    y:200;
}
svg > #LincolnHills + foreignObject {
    x:1010;
    y:170;
}
svg > #AltaVistaPark + foreignObject {
    x:590;
    y:180;
}
svg > #BiltmoreHotelVillas + foreignObject {
    x:640px;
    y:190px;
}
/* ... */

